--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
 body {
-    background-color: #031003;
+    background-color: #030603;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#console {
+    width: fit-content;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
 }
